<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:visibility="visible"
    android:weightSum="100"
    tools:visibility="visible">


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        app:srcCompat="@drawable/ic_login_img" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />
    <!--
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:layout_weight="10"
            android:hint="Name"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:startIconContentDescription="Name"
                app:startIconDrawable="@drawable/ic_person" />

        </com.google.android.material.textfield.TextInputLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45">

        <TextView
            android:id="@+id/login_header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/login_heading1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_header1"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/login_heading2"
            android:textAlignment="center"
            android:textColor="@color/quote_color"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_name_box"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_header2"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:hint="@string/login_et_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_mobileno_box"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_name_box"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:hint="@string/login_et_mobileno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_mail_box"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_mobileno_box"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:hint="@string/login_et_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/login_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_mail_box"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:buttonTint="@color/theme_color"
            android:text="@string/login_checkbox_text"
            android:textColor="@color/quote_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_checkbox"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="30dp"
            android:text="@string/login_checkbox_text_small"
            android:textColor="#BF888282"
            android:textSize="10sp" />

    </RelativeLayout>
    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_MobileNos"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="10"
        android:hint="Mobile Number"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            app:startIconContentDescription="Mobile Number"
            app:startIconDrawable="@drawable/ic_person" />
-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="horizontal"
        android:weightSum="100">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25" />

        <Button
            android:id="@+id/btn_getOTP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_weight="50"
            android:background="@drawable/btn_getotp"
            android:text="@string/login_btn_text"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25" />
    </LinearLayout>

</LinearLayout>

    <!--

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="100"
        tools:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical"
            android:weightSum="100">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="30"
                android:fontFamily="@font/satisfy"
                android:text="@string/app_name"
                android:textColor="@color/theme_color"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:fontFamily="@font/satisfy"
                android:text="Be a Better Future"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical"
            android:weightSum="100">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="90"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/theme_color"
                app:strokeWidth="2dp">


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="Login to Continue"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginRight="20dp"
                    android:hint="Name"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        app:startIconContentDescription="Name"
                        app:startIconDrawable="@drawable/ic_person" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="Mobile Number"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_MobileNos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        app:startIconContentDescription="Mobile Number"
                        app:startIconDrawable="@drawable/ic_person" />

                </com.google.android.material.textfield.TextInputLayout>


            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />


        </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/txt_continue_to_login"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:text="please login to continue using our app" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25" />

            <Button
                android:id="@+id/btn_getOTP"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_below="@id/txt_continue_to_login"
                android:layout_margin="7dp"
                android:layout_weight="50"
                android:background="@drawable/btn_getotp"
                android:text="Get OTP"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"

                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        </LinearLayout>
    -->
